// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Error Default 1`] = `
.emotion-1 {
  margin: 10px;
}

.emotion-0 {
  color: red;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Oh no! Something bad happend :(
  </div>
</div>
`;

exports[`Storyshots Error With Button 1`] = `
.emotion-2 {
  margin: 10px;
}

.emotion-0 {
  background: #a9dc76;
  box-shadow: 0px 5px 0px #b4b4b4;
  border-radius: 15px;
  font-size: 1.2rem;
  color: #505050;
  padding: 4px 15px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  cursor: pointer;
}

.emotion-0:disabled {
  color: #505050;
  background: #909090;
}

.emotion-1 {
  color: red;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    Oh no! Something bad happend :( 
    <button
      className="emotion-0"
    >
      Try again
    </button>
  </div>
</div>
`;
